--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,12 @@
 Assets/Shaders/* linguist-vendored
 Assets/Materials/* linguist-vendored
 Assets/PostProcessing/* linguist-vendored
+*.shader linguist-vendored
+*.hlsl linguist-vendored
+Assets/**.hlsl linguist-vendored
+Assets/Shaders/** linguist-vendored
+Packages/**.hlsl linguist-vendored
+Assets/PostProcessing/** linguist-vendored
+Assets/**/Shaders/** linguist-vendored
+
+
