--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,42 @@
-# Auto detect text files and perform LF normalization
+# Automatically normalize line endings
 * text=auto
-*.shader linguist-vendored
-*.hlsl linguist-vendored
-Assets/Shaders/* linguist-vendored
-Assets/Materials/* linguist-vendored
-Assets/PostProcessing/* linguist-vendored
-*.shader linguist-vendored
-*.hlsl linguist-vendored
-Assets/**.hlsl linguist-vendored
-Assets/Shaders/** linguist-vendored
-Packages/**.hlsl linguist-vendored
-Assets/PostProcessing/** linguist-vendored
-Assets/**/Shaders/** linguist-vendored
 
+# Force LF line endings for common Unity file types
+*.cs     text eol=lf
+*.shader text eol=lf
+*.cginc  text eol=lf
+*.compute text eol=lf
+*.unity  text eol=lf
+*.prefab text eol=lf
+*.mat    text eol=lf
+*.meta   text eol=lf
+*.anim   text eol=lf
+*.controller text eol=lf
+*.overrideController text eol=lf
+*.asset  text eol=lf
+*.physicMaterial text eol=lf
+*.mask   text eol=lf
+*.asmdef text eol=lf
+*.json   text eol=lf
+*.xml    text eol=lf
+*.yaml   text eol=lf
 
+# Binary files - do not diff or merge
+*.dll    binary
+*.exe    binary
+*.png    binary
+*.jpg    binary
+*.jpeg   binary
+*.fbx    binary
+*.mp3    binary
+*.wav    binary
+*.ogg    binary
+*.mp4    binary
+*.mov    binary
+*.psd    binary
+*.tga    binary
+*.zip    binary
+*.unitypackage binary
+
+# Ignore Unity's generated VSCode settings
+.vscode/* linguist-vendored
